# haskell-cpython

./: .gitignore  .travis.yml  README.md  changelog.md  configure  configure.ac  cpython.buildinfo.in  cpython.cabal  flake.nix  stack.yaml
cbits/: hscpython-shim.c  hscpython-shim.h
lib/: CPython.chs
lib/CPython/: Constants.chs  Internal.chs  Reflection.chs  Simple.hs  System.chs  Types.hs
lib/CPython/Protocols/: Iterator.chs  Mapping.chs  Number.chs  Object.chs  Sequence.chs
lib/CPython/Simple/: Instances.hs
lib/CPython/Types/: ByteArray.chs  Bytes.chs  Capsule.chs  Cell.chs  Code.chs  Complex.chs  Dictionary.chs  Exception.chs  Float.chs  Function.chs  InstanceMethod.chs  Integer.chs  Iterator.chs  List.chs  Method.chs  Module.chs  Set.chs  Slice.chs  Tuple.chs  Type.chs  Unicode.chs  WeakReference.chs
tests/: Tests.hs  ThreadingTests.hs  haskell-cpython-tests.cabal
